# routes/index.js
@@ -2,6 +2,9 @@ const route = require("express").Router();
 const ties = require("./ties");
 const user = require("./user"); 
 const swagger = require("./swagger"); 
+const order = require("./order")
+const category = require("./category")
+const authenticate = require("../util/validation")
 
 
 // Ruta raíz
@@ -12,6 +15,9 @@ route.get("/", (req, res) => {
 // Rutas de corbatas
 route.use("/tie", ties);
 route.use("/user", user)
+route.use("/order", order)
+route.use("/category", category)
 route.use("/swagger", swagger); 
+
 
 module.exports = route;
